--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "transform": {
       ".(ts|tsx)": "ts-jest"
     },
-    "testEnvironment": "node",
+    "testEnvironment": "jsdom",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
@@ -70,7 +70,11 @@
       }
     },
     "collectCoverageFrom": [
-      "src/*.{js,ts}"
+      "src/*.{js,ts}",
+      "src/**/*.{js,ts}"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/boot.ts"
     ]
   },
   "prettier": {
@@ -83,53 +87,54 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.1.2",
-    "@commitlint/config-conventional": "^7.1.2",
-    "@types/jest": "^23.3.2",
-    "@types/node": "^10.11.0",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.5.3",
+    "atob": "^2.1.2",
     "body-parser": "^1.19.0",
-    "colors": "^1.3.2",
-    "commitizen": "^3.0.0",
+    "colors": "^1.3.3",
+    "commitizen": "^4.0.3",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.4",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.6",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
-    "cz-conventional-changelog": "^2.1.0",
+    "cz-conventional-changelog": "^3.0.2",
     "express": "^4.17.1",
-    "husky": "^1.0.1",
-    "jest": "^23.6.0",
-    "jest-config": "^23.6.0",
-    "lint-staged": "^8.0.0",
+    "husky": "^3.0.4",
+    "jest": "^24.9.0",
+    "jest-config": "^24.9.0",
+    "lint-staged": "^9.2.3",
     "lodash.camelcase": "^4.3.0",
     "nprogress": "^0.2.0",
-    "prettier": "^1.14.3",
+    "prettier": "^1.18.2",
     "prompt": "^1.0.0",
-    "qs": "^6.7.0",
-    "replace-in-file": "^3.4.2",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.67.0",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "qs": "^6.8.0",
+    "replace-in-file": "^4.1.3",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.19.4",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.18.0",
-    "semantic-release": "^15.9.16",
+    "rollup-plugin-typescript2": "^0.22.1",
+    "semantic-release": "^15.13.21",
     "shelljs": "^0.8.3",
     "style-loader": "^1.0.0",
-    "travis-deploy-once": "^5.0.9",
-    "ts-jest": "^23.10.2",
+    "travis-deploy-once": "^5.0.11",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.19.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "tslint-loader": "^3.5.4",
-    "typedoc": "^0.12.0",
-    "typescript": "^3.0.3",
-    "webpack": "^4.35.0",
+    "tslint-loader": "^3.6.0",
+    "typedoc": "^0.15.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.2",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0"
   }
