--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
       ".(ts|tsx)": "ts-jest"
     },
     "testEnvironment": "jsdom",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testRegex": "/test/.*\\.(test|spec)\\.(ts)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -89,6 +89,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "@types/jasmine-ajax": "^3.3.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
     "@types/nprogress": "^0.2.0",
@@ -105,6 +106,8 @@
     "cz-conventional-changelog": "^3.0.2",
     "express": "^4.17.1",
     "husky": "^3.0.4",
+    "jasmine-ajax": "^4.0.0",
+    "jasmine-core": "^3.4.0",
     "jest": "^24.9.0",
     "jest-config": "^24.9.0",
     "lint-staged": "^9.2.3",
