--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ts-axios",
+  "name": "ts-axios-library",
   "version": "0.0.0",
   "description": "",
   "keywords": [],
-  "main": "dist/ts-axios.umd.js",
-  "module": "dist/ts-axios.es5.js",
+  "main": "dist/axios.umd.js",
+  "module": "dist/axios.es5.js",
   "typings": "dist/types/ts-axios.d.ts",
   "files": [
     "dist"
@@ -12,7 +12,7 @@
   "author": "aioros2016 <d_iii@aliyun.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/aioros2016/ts-axios"
   },
   "license": "MIT",
   "engines": {
@@ -33,7 +33,9 @@
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once"
+    "travis-deploy-once": "travis-deploy-once",
+    "prepub": "npm run test:prod && npm run build",
+    "pub": "sh release.sh"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
