--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ts-axios-library",
-  "version": "0.1.2",
+  "name": "ts-axios-lib",
+  "version": "0.0.0",
   "description": "",
   "keywords": [],
   "main": "dist/axios.umd.js",
